2003-08-26  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/bibliography/engraving.bib (year): typos.

2003-08-25  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/lilypond-book.itely (Invoking lilypond-book):
	add note about -Ppdf

2003-08-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/slur.cc (get_attachment): bugfix: don't crash on non-cons
	attachment property.

	* Documentation/user/refman.itely: url fixes.

	* po/sv.po: new po

2003-08-21  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION (PACKAGE_NAME): Branch lilypond_1_8, release 1.8.1 

	* Documentation/user/refman.itely (Text markup): add comment about
	markup in header.

2003-08-20  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/paper-outputter.cc (write_header_fields_to_file): 
	only dump value if it is a string.

	* flower/include/dictionary.hh: remove.
	
	* Documentation/ChangeLog-1.5: add back old log.

	* Documentation/topdocs/INSTALL.texi (Top): explain how to get
	.pfas from a .deb.

2003-08-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/bibliography/engraving.bib: add entry for
	Jaschinski's Notation

2003-08-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/refman.itely (Beaming): add note about
	allowBeamBreak

2003-08-18  Juergen Reuter  <reuter@ipd.uka.de>

	* lilypond.words, ly/engraver-init.ly, ly/params-init.ly: added
	GregorianTranscription contexts

	* ly/engraver-init.ly: vaticana contexts: minor fixes

	* Documentation/user/refman.itely (Ancient notation): added note
	on appendix length bug

	* input/puer-fragment.ly, input/test/gregorian-scripts.ly,
	input/test/vaticana.ly: use vaticana contexts; small fixes

2003-08-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/hash.cc: Remove.

	* flower/include/dictionary.hh (V>): Compile fix: Remove assignment
	to (nonexistent?) hash_func_ identifier.

	* python/midi.c (midi_error, midi_warning): Use char const* for
	__FUNCTION__ argument.
