@@ -234,10 +234,10 @@ def setup_temp ():
 	return __main__.temp_dir
 
 def command_name (cmd):
-	return re.match ('^[ \t]*([^ \t]*)', cmd).group (1)
+	return re.match ('^[^a-z0-9_-]*([a-z0-9_-]*)', cmd).group (1)
 
 def error_log (name):
-	name = re.sub('[/:]','x',name)
+	name = re.sub('[^a-z]','x',name)
 	return tempfile.mktemp ('%s.errorlog' % name)
 
 def read_pipe (cmd, mode = 'r'):
